--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,12 +1,17 @@
 version: 0.2
 
-phases: 
+phases:
   install:
-    runtime-version:
-      java: corretto11
+    runtime-versions:
+      java: corretto17
   build:
     commands:
+      - echo Build started on `date`
       - mvn install
+  post_build:
+    commands:
+      - echo Build completed on `date`
+      - mvn package
 
 artifacts:
   files:
