--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,12 +4,11 @@ phases:
   install:
     runtime-versions:
       java: corretto17
-  pre_build:
-    commands:
-    - echo In the pre_build phase...
   build:
     commands:
     - echo Build started on `date`
+    - mvn install
+    
   post_build:
     commands:
     - echo Build completed on `date`
