--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,12 +3,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - mvn install
-    
-  post_build:
-    commands:
-      - echo Build completed on `date`
-      - mvn package
+      - mvn clean install
     
 artifacts:
   files:
