--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,11 +1,13 @@
 version: 0.2
 phases:
+  install:
+    runtime-version:
+    java: 12  
   build:
     commands:
       - echo Build started on `date`
-      - mvn clean install
+      - mvn install
     
 artifacts:
   files:
-  - target/*.war
-  - appspec.yml/**/*
+  
