--- a/appspec.yml
+++ b/appspec.yml
@@ -2,7 +2,7 @@ version: 0.0
 
 files:
   - source: /target/*.war
-    destination: /var/www/html/
+    destination: /opt/tomcat/webapps/
 
 hooks:
   BeforeInstall:
