--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,7 +2,7 @@ version: 0.2
 phases:
   install:
     runtime-version:
-    java: 12  
+    java: corretto11
   build:
     commands:
       - echo Build started on `date`
