--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,13 +1,19 @@
 version: 0.2
+
 phases:
   install:
-    runtime-version:
-    java: corretto11
+    runtime-versions:
+      java: corretto11
+  pre_build:
+    commands:
+      - echo Nothing to do in the pre_build phase...
   build:
     commands:
       - echo Build started on `date`
       - mvn install
-    
+  post_build:
+    commands:
+      - echo Build completed on `date`    
 artifacts:
   files:
      - scr/main/**/*
