--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,6 +16,8 @@ phases:
       - echo Build completed on `date`    
 artifacts:
   files:
-    - "target/.war*"
+    - "target/**/*"
+    - "appspec.yml"
+    - "scripts/**/*"
      
 
