--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,8 +16,8 @@ phases:
       - echo Build completed on `date`    
 artifacts:
   files:
-    - "target/**/*"
-    - "appspec.yml"
-    - "scripts/**/*"
+    - target/**/*
+    - appspec.yml
+    - scripts/**/*
      
 
