--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,8 +16,9 @@ phases:
       - echo Build completed on `date`    
 artifacts:
   files:
-    - target/*.war
+    - target/**/*
     - appspec.yml
     - scripts/**/*
+    - pom.xml
      
 
